<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/libraryFragment">

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.mhraganatplus.view.LibraryFragment"
        android:label="@string/library_title"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_to_player"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.mhraganatplus.view.PlayerFragment"
        android:label="@string/player_title"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.mhraganatplus.view.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />
</navigation>